# GomokuAI

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Gomoku.vcxproj  Gomoku.vcxproj.filters  GomokuAI.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
docs/: 技术文档.md
src/ai/: AIPlayer.h  AlphaBetaAI.cpp  AlphaBetaAI.h  MinimaxAI.cpp  MinimaxAI.h
src/core/: Board.h  GameEngine.cpp  GameEngine.h  Move.h
src/ga/: GATuner.cpp  GATuner.h
src/gui/: BoardView.cpp  BoardView.h  Main.cpp
src/heuristics/: Heuristics.cpp  Heuristics.h
